# oligo-cx47

./: .gitignore  README.md  pyproject.toml
config/: dataset_catalog.csv
data/: README.md
notebooks/: 01-panglial-network-EAE.ipynb  01-panglial-network-MS-sc.ipynb  01-panglial-network-MS-spinalcord.ipynb  01-panglial-network.ipynb  02-cx47-mitochondrial-recovery-LPC.ipynb  03-er-stress-reactive-glia.ipynb  04-transglial-mito-communication.ipynb  05-lipid-glymphatic.ipynb
notebooks/misc/: 00_dataset_inventory.ipynb  01_panglial_network_remodeling.ipynb  02_cx47_mitochondrial_recovery.ipynb
notebooks/misc_deprecated/: 03_er_stress_and_reactive_glia.ipynb  04_transglial_mitochondrial_communication.ipynb  05_lipid_metabolism_and_glymphatic_links.ipynb
scripts/: build_notebooks.py  import_catalog_datasets.py
src/cx47_oligo/: __init__.py  exports.py  gene_panels.py  h5ad_tools.py  notebook_viz.py  questions.py  scanpy_compat.py  scanpy_tools.py  source_import.py
